--- a/api/qsharp/microsoft.quantum.canon.applyseriesofopsc.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyseriesofopsc.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.canon.applyseriesofopsc
 name: ApplySeriesOfOpsC
 type: operation
-namespace: Microsoft.Quantum.Canon
-summary: 在数组上按顺序应用 ops 及其目标的列表。 操控
+namespace: microsoft.quantum.canon
+summary: '在数组上按顺序应用 ops 及其目标的列表。  (控制) '
 syntax: "operation ApplySeriesOfOpsC (listOfOps : ('T[] => Unit is Ctl)[], targets : Int[][], register : 'T[]) : Unit"
 input:
   content: "(listOfOps : ('T[] => Unit is Ctl)[], targets : Int[][], register : 'T[])"
@@ -48,9 +48,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applyoprepeatedlyover
 metadata:
-  ms.openlocfilehash: 2f1da35c130c0d8330ca3dce148f199110ae6e3e
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 13ee522ce7b1962ffebfaf47873985b4be936ac2
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82670954"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357827"
