--- a/api/qsharp/microsoft.quantum.canon.applytoeachc.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytoeachc.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.applytoeachc
 name: ApplyToEachC
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   对寄存器中的每个元素应用 qubit 操作。
 
-  修饰符`C`指示 qubit 操作可控制。
+  修饰符 `C` 指示 qubit 操作可控制。
 examples: >-
   准备 qubit $ \ket{+} $ 状态：
 
@@ -53,9 +53,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytoeach
 metadata:
-  ms.openlocfilehash: 66792660a304db918cbf158c969bd0a8896fbee7
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 2d8cc9ada97cbe1d6938148b2abfdd495c1a4ff9
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674898"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357725"
