--- a/api/qsharp/microsoft.quantum.canon.applytoelementca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytoelementca.yml
@@ -2,12 +2,12 @@
 uid: microsoft.quantum.canon.applytoelementca
 name: ApplyToElementCA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   将操作应用到数组的给定元素。
 
 
-  给定一个操作`op`、一个索引`index`和一个目标`targets`数组，适用于`op(targets[index])`。
+  给定一个操作 `op` 、一个索引 `index` 和一个目标数组 `targets` ，适用于 `op(targets[index])` 。
 syntax: "operation ApplyToElementCA (op : ('T => Unit is Adj + Ctl), index : Int, targets : 'T[]) : Unit"
 input:
   content: "(op : ('T => Unit is Adj + Ctl), index : Int, targets : 'T[])"
@@ -50,9 +50,9 @@ seeAlso:
 - microsoft.quantum.canon.applytoelementc
 - microsoft.quantum.canon.applytoelementa
 metadata:
-  ms.openlocfilehash: 16c86cc428665d0b744ced8c78f3ca4f0027d9b6
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 84737033dd1446b2ec209482cb096201308a94fe
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82669921"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357572"
