--- a/api/qsharp/microsoft.quantum.canon.applytofirstthreequbitsa.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytofirstthreequbitsa.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.applytofirstthreequbitsa
 name: ApplyToFirstThreeQubitsA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   将操作应用于寄存器中的前三个 qubits。
 
-  修饰符`A`指示操作为 adjointable。
+  修饰符 `A` 指示操作为 adjointable。
 remarks: >-
   这等效于：
 
@@ -52,9 +52,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytofirstthreequbits
 metadata:
-  ms.openlocfilehash: 7f19681e6bec0af50bba497a97373ccb632871fb
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: b993e59df7261f1b41675790b8f7b99d04acd486
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82668067"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357487"
