--- a/api/qsharp/microsoft.quantum.math.ieeeremainder.yml
+++ b/api/qsharp/microsoft.quantum.math.ieeeremainder.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.math.ieeeremainder
 name: IEEERemainder
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回一指定数字被另一指定数字相除的余数。
-remarks: 有关更多详细信息，请参阅[IEEERemainder](https://docs.microsoft.com/dotnet/api/system.math.ieeeremainder) 。
+remarks: 有关更多详细信息，请参阅 [IEEERemainder](https://docs.microsoft.com/dotnet/api/system.math.ieeeremainder) 。
 syntax: 'function IEEERemainder (x : Double, y : Double) : Double'
 input:
   content: '(x : Double, y : Double)'
@@ -21,9 +21,9 @@ output:
   - isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: ff9ba7311206591673b3aee36fa228e188057cbb
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: a1cd5920782aa7d2d465ffd1a301eb5e7ebb22f9
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684199"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89343836"
