--- a/api/qsharp/microsoft.quantum.oracles.stateoraclefromdeterministicstateoracle.yml
+++ b/api/qsharp/microsoft.quantum.oracles.stateoraclefromdeterministicstateoracle.yml
@@ -2,27 +2,27 @@
 uid: microsoft.quantum.oracles.stateoraclefromdeterministicstateoracle
 name: StateOracleFromDeterministicStateOracle
 type: function
-namespace: Microsoft.Quantum.Oracles
-summary: 将类型`DeterministicStateOracle`的 oracle 转换为`StateOracle`。
+namespace: microsoft.quantum.oracles
+summary: 将类型的 oracle 转换 `DeterministicStateOracle` 为 `StateOracle` 。
 syntax: 'function StateOracleFromDeterministicStateOracle (deterministicStateOracle : Microsoft.Quantum.Oracles.DeterministicStateOracle) : Microsoft.Quantum.Oracles.StateOracle'
 input:
   content: '(deterministicStateOracle : Microsoft.Quantum.Oracles.DeterministicStateOracle)'
   types:
   - name: deterministicStateOracle
-    summary: 准备 oracle $A 类型`DeterministicStateOracle`为的状态。
+    summary: 准备 oracle $A 类型为的状态 `DeterministicStateOracle` 。
     uid: microsoft.quantum.oracles.deterministicstateoracle
 output:
   content: Microsoft.Quantum.Oracles.StateOracle
   types:
-  - summary: 相同状态准备 oracle $A $，但现在为类型`StateOracle`。 请注意，在这`StateOracle`种情况下，标志索引是一个虚拟变量，因此不起作用。
+  - summary: 相同状态准备 oracle $A $，但现在为类型 `StateOracle` 。 请注意，在这种情况下，标志索引 `StateOracle` 是一个虚拟变量，因此不起作用。
     uid: microsoft.quantum.oracles.stateoracle
 seeAlso:
 - microsoft.quantum.canon.deterministicstateoracle
 - microsoft.quantum.canon.stateoracle
 metadata:
-  ms.openlocfilehash: 9431b58659bb50de872f73890a4a055c5534b2a0
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 77cdfba157be67bb68cec53f3d8a0780a347bf37
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82685150"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89331732"
