--- a/api/qsharp/microsoft.quantum.canon.applyifelseb.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyifelseb.yml
@@ -2,22 +2,22 @@
 uid: microsoft.quantum.canon.applyifelseb
 name: ApplyIfElseB
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   应用两个操作之一，具体取决于传统位的值。
 
 
-  给定一个位`bit`，在为时`trueOp`应用`trueInput`该操作，并`bit`在`true`为时应用`falseOp(falseInput)` `bit`该操作`false`。
+  给定一个位，在为时 `bit` 应用该操作，并在为时应用该操作 `trueOp` `trueInput` `bit` `true` `falseOp(falseInput)` `bit` `false` 。
 syntax: "operation ApplyIfElseB (bit : Bool, (trueOp : ('T => Unit), trueInput : 'T), (falseOp : ('U => Unit), falseInput : 'U)) : Unit"
 input:
   content: "(bit : Bool, (trueOp : ('T => Unit), trueInput : 'T), (falseOp : ('U => Unit), falseInput : 'U))"
   types:
   - name: bit
-    summary: 用于确定是否`trueOp`应用或`falseOp`的布尔值。
+    summary: 用于确定是否 `trueOp` 应用或的布尔值 `falseOp` 。
     isPrimitive: true
     uid: Bool
   - name: trueOp
-    summary: 在为`bit` `true`时要应用的操作。
+    summary: 在为时要应用的 `bit` 操作 `true` 。
     isOperation: true
     input:
       types:
@@ -28,11 +28,11 @@ input:
       - isPrimitive: true
         uid: Unit
   - name: trueInput
-    summary: 当为`trueOp` `bit` `true`时要向其提供的输入。
+    summary: 当为时要向其提供的输入 `trueOp` `bit` `true` 。
     uid: "'T"
     isLocal: true
   - name: falseOp
-    summary: 在为`bit` `false`时要应用的操作。
+    summary: 在为时要应用的 `bit` 操作 `false` 。
     isOperation: true
     input:
       types:
@@ -43,7 +43,7 @@ input:
       - isPrimitive: true
         uid: Unit
   - name: falseInput
-    summary: 当为`falseOp` `bit` `false`时要向其提供的输入。
+    summary: 当为时要向其提供的输入 `falseOp` `bit` `false` 。
     uid: "'U"
     isLocal: true
 output:
@@ -53,9 +53,9 @@ output:
     uid: Unit
 typeParameters:
 - uid: "'T"
-  summary: 要有条件地应用的`trueOp`操作的输入类型。
+  summary: '`trueOp`要有条件地应用的操作的输入类型。'
 - uid: "'U"
-  summary: 要有条件地应用的`falseOp`操作的输入类型。
+  summary: '`falseOp`要有条件地应用的操作的输入类型。'
 seeAlso:
 - microsoft.quantum.canon.applyifzero
 - microsoft.quantum.canon.applyifone
@@ -63,9 +63,9 @@ seeAlso:
 - microsoft.quantum.canon.applyifelsera
 - microsoft.quantum.canon.applyifelserca
 metadata:
-  ms.openlocfilehash: cce5dba2473874f5af7c8cbb41a69ed6ba62e7c7
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 756cfb829ce29e658641e9e7a4e42c626bce4798
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82675034"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89350415"
