--- a/api/qsharp/microsoft.quantum.canon.applyifelsebca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyifelsebca.yml
@@ -2,22 +2,22 @@
 uid: microsoft.quantum.canon.applyifelsebca
 name: ApplyIfElseBCA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   应用两个单一操作之一，具体取决于传统位的值。
 
 
-  给定一个位`bit`，在为时`trueOp`应用`trueInput`该操作，并`bit`在`true`为时应用`falseOp(falseInput)` `bit`该操作`false`。
+  给定一个位，在为时 `bit` 应用该操作，并在为时应用该操作 `trueOp` `trueInput` `bit` `true` `falseOp(falseInput)` `bit` `false` 。
 syntax: "operation ApplyIfElseBCA (bit : Bool, (trueOp : ('T => Unit is Adj + Ctl), trueInput : 'T), (falseOp : ('U => Unit is Adj + Ctl), falseInput : 'U)) : Unit"
 input:
   content: "(bit : Bool, (trueOp : ('T => Unit is Adj + Ctl), trueInput : 'T), (falseOp : ('U => Unit is Adj + Ctl), falseInput : 'U))"
   types:
   - name: bit
-    summary: 用于确定是否`trueOp`应用或`falseOp`的布尔值。
+    summary: 用于确定是否 `trueOp` 应用或的布尔值 `falseOp` 。
     isPrimitive: true
     uid: Bool
   - name: trueOp
-    summary: 在为`bit` `true`时要应用的单一操作。
+    summary: 在为时要应用的单一 `bit` 操作 `true` 。
     isOperation: true
     input:
       types:
@@ -31,11 +31,11 @@ input:
     - Adjoint
     - Controlled
   - name: trueInput
-    summary: 当为`trueOp` `bit` `true`时要向其提供的输入。
+    summary: 当为时要向其提供的输入 `trueOp` `bit` `true` 。
     uid: "'T"
     isLocal: true
   - name: falseOp
-    summary: 在为`bit` `false`时要应用的单一操作。
+    summary: 在为时要应用的单一 `bit` 操作 `false` 。
     isOperation: true
     input:
       types:
@@ -49,7 +49,7 @@ input:
     - Adjoint
     - Controlled
   - name: falseInput
-    summary: 当为`falseOp` `bit` `false`时要向其提供的输入。
+    summary: 当为时要向其提供的输入 `falseOp` `bit` `false` 。
     uid: "'U"
     isLocal: true
 output:
@@ -59,9 +59,9 @@ output:
     uid: Unit
 typeParameters:
 - uid: "'T"
-  summary: 要有条件地应用的`trueOp`操作的输入类型。
+  summary: '`trueOp`要有条件地应用的操作的输入类型。'
 - uid: "'U"
-  summary: 要有条件地应用的`falseOp`操作的输入类型。
+  summary: '`falseOp`要有条件地应用的操作的输入类型。'
 functors:
 - Adjoint
 - Controlled
@@ -72,9 +72,9 @@ seeAlso:
 - microsoft.quantum.canon.applyifelsera
 - microsoft.quantum.canon.applyifelserca
 metadata:
-  ms.openlocfilehash: 3f0d704d33fc1d3e964e804c2ff68cb893069445
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 608808f776ac0d187571adc415abc0c7d1666ef9
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82672774"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89350347"
