--- a/api/qsharp/microsoft.quantum.canon.applyifelser.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyifelser.yml
@@ -2,22 +2,22 @@
 uid: microsoft.quantum.canon.applyifelser
 name: ApplyIfElseR
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   应用两个操作之一，具体取决于传统结果的值。
 
 
-  如果结果`result`为，则在等于`zeroOp` `zeroInput` `result` `Zero`时应用该操作，并应用`oneOp(oneInput)`该操作。 `result == One`
+  如果结果为 `result` ，则在等于时应用该操作， `zeroOp` `zeroInput` `result` `Zero` 并应用 `oneOp(oneInput)` `result == One` 该操作。
 syntax: "operation ApplyIfElseR (result : Result, (zeroOp : ('T => Unit), zeroInput : 'T), (oneOp : ('U => Unit), oneInput : 'U)) : Unit"
 input:
   content: "(result : Result, (zeroOp : ('T => Unit), zeroInput : 'T), (oneOp : ('U => Unit), oneInput : 'U))"
   types:
   - name: result
-    summary: 用于确定是否应用`zeroOp`或`oneOp`的测量结果。
+    summary: 用于确定是否应用或的测量 `zeroOp` 结果 `oneOp` 。
     isPrimitive: true
     uid: Result
   - name: zeroOp
-    summary: 在时`result == Zero`要应用的操作。
+    summary: 在时要应用的操作 `result == Zero` 。
     isOperation: true
     input:
       types:
@@ -28,11 +28,11 @@ input:
       - isPrimitive: true
         uid: Unit
   - name: zeroInput
-    summary: 要提供给`zeroOp`的时间`result == Zero`。
+    summary: 要提供给的 `zeroOp` 时间 `result == Zero` 。
     uid: "'T"
     isLocal: true
   - name: oneOp
-    summary: 在时`result == One`要应用的操作。
+    summary: 在时要应用的操作 `result == One` 。
     isOperation: true
     input:
       types:
@@ -43,7 +43,7 @@ input:
       - isPrimitive: true
         uid: Unit
   - name: oneInput
-    summary: 要提供给`oneOp`的时间`result == One`。
+    summary: 要提供给的 `oneOp` 时间 `result == One` 。
     uid: "'U"
     isLocal: true
 output:
@@ -53,9 +53,9 @@ output:
     uid: Unit
 typeParameters:
 - uid: "'T"
-  summary: 要有条件地应用的`zeroOp`操作的输入类型。
+  summary: '`zeroOp`要有条件地应用的操作的输入类型。'
 - uid: "'U"
-  summary: 要有条件地应用的`oneOp`操作的输入类型。
+  summary: '`oneOp`要有条件地应用的操作的输入类型。'
 seeAlso:
 - microsoft.quantum.canon.applyifzero
 - microsoft.quantum.canon.applyifone
@@ -63,9 +63,9 @@ seeAlso:
 - microsoft.quantum.canon.applyifelsera
 - microsoft.quantum.canon.applyifelserca
 metadata:
-  ms.openlocfilehash: 4623c321aa2b802b8f27f6a3ec8e65463083b314
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 1614a00214bdebe8d5b761cc8ca0732d76a919f7
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82672748"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89350245"
