--- a/api/qsharp/microsoft.quantum.canon.applytoelementa.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytoelementa.yml
@@ -2,12 +2,12 @@
 uid: microsoft.quantum.canon.applytoelementa
 name: ApplyToElementA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   将操作应用到数组的给定元素。
 
 
-  给定一个操作`op`、一个索引`index`和一个目标`targets`数组，适用于`op(targets[index])`。
+  给定一个操作 `op` 、一个索引 `index` 和一个目标数组 `targets` ，适用于 `op(targets[index])` 。
 syntax: "operation ApplyToElementA (op : ('T => Unit is Adj), index : Int, targets : 'T[]) : Unit"
 input:
   content: "(op : ('T => Unit is Adj), index : Int, targets : 'T[])"
@@ -48,9 +48,9 @@ seeAlso:
 - microsoft.quantum.canon.applytoelementc
 - microsoft.quantum.canon.applytoelementca
 metadata:
-  ms.openlocfilehash: 204580bc5c7f7346c3925cff736d7565d5449a83
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: f03e293a5e786d09137e29a21b8a100eeffe70b8
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82670027"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357623"
