--- a/api/qsharp/microsoft.quantum.canon.applytofirstqubita.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytofirstqubita.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.applytofirstqubita
 name: ApplyToFirstQubitA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   将操作应用于寄存器中的第一个 qubit。
 
-  修饰符`A`指示操作为 adjointable。
+  修饰符 `A` 指示操作为 adjointable。
 syntax: 'operation ApplyToFirstQubitA (op : (Qubit => Unit is Adj), register : Qubit[]) : Unit'
 input:
   content: '(op : (Qubit => Unit is Adj), register : Qubit[])'
@@ -39,9 +39,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytofirstqubit
 metadata:
-  ms.openlocfilehash: b97af9b9801a359238bd83c68b99d12ba8f6218b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: c2d13613773ae6425cacf532f6d3cb3870348e8c
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82669571"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357538"
