--- a/api/qsharp/microsoft.quantum.canon.applytofirstqubitc.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytofirstqubitc.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.applytofirstqubitc
 name: ApplyToFirstQubitC
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   将操作 op 应用于寄存器中的第一个 qubit。
 
-  修饰符`C`指示操作可控制。
+  修饰符 `C` 指示操作可控制。
 syntax: 'operation ApplyToFirstQubitC (op : (Qubit => Unit is Ctl), register : Qubit[]) : Unit'
 input:
   content: '(op : (Qubit => Unit is Ctl), register : Qubit[])'
@@ -39,9 +39,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytofirstqubit
 metadata:
-  ms.openlocfilehash: 131901797dc729fa6dc392ca15ae04b1f8e61f0c
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: d76137ea37be9cf59e9801f26975ea583cba623b
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82668642"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357521"
