--- a/api/qsharp/microsoft.quantum.canon.applytofirstqubitca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytofirstqubitca.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.applytofirstqubitca
 name: ApplyToFirstQubitCA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   将操作 op 应用于寄存器中的第一个 qubit。
 
-  修饰符`CA`指示该操作是可控制的且 adjointable。
+  修饰符 `CA` 指示该操作是可控制的且 adjointable。
 syntax: 'operation ApplyToFirstQubitCA (op : (Qubit => Unit is Adj + Ctl), register : Qubit[]) : Unit'
 input:
   content: '(op : (Qubit => Unit is Adj + Ctl), register : Qubit[])'
@@ -41,9 +41,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytofirstqubit
 metadata:
-  ms.openlocfilehash: 4d6b53afdface52a6b38fa4fea1b3e2700340a72
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 450348b20b43148406889e2dafcd73010c20f7ac
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82668559"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357504"
