--- a/api/qsharp/microsoft.quantum.canon.applytofirstthreequbitsca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytofirstthreequbitsca.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.applytofirstthreequbitsca
 name: ApplyToFirstThreeQubitsCA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   将操作应用于寄存器中的前三个 qubits。
 
-  修饰符`CA`指示该操作是可控制的且 adjointable。
+  修饰符 `CA` 指示该操作是可控制的且 adjointable。
 remarks: >-
   这等效于：
 
@@ -54,9 +54,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytofirstthreequbits
 metadata:
-  ms.openlocfilehash: c0800e1cc6efbe43448d3792140497ac50ec1c33
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 8e8c655dde71c1303ddae1b9e1917cdf7848a890
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674729"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357420"
