--- a/api/qsharp/microsoft.quantum.canon.applytofirsttwoqubitsca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytofirsttwoqubitsca.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.applytofirsttwoqubitsca
 name: ApplyToFirstTwoQubitsCA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   将操作应用于寄存器中的前两个 qubits。
 
-  修饰符`CA`指示该操作是可控制的且 adjointable。
+  修饰符 `CA` 指示该操作是可控制的且 adjointable。
 remarks: >-
   这等效于：
 
@@ -52,9 +52,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytofirsttwoqubits
 metadata:
-  ms.openlocfilehash: fc1291d7fda28978ae73746310f0adf3d4935efb
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: edb0bd59eb46d4828980d8007176bc28950bfd28
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674655"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357368"
