--- a/api/qsharp/microsoft.quantum.math.min.yml
+++ b/api/qsharp/microsoft.quantum.math.min.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.math.min
 name: Min
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 给定整数数组，返回最小元素。
 syntax: 'function Min (value : Int[]) : Int'
 input:
@@ -15,13 +15,13 @@ input:
 output:
   content: Int
   types:
-  - summary: 的`values`最小元素。
+  - summary: 的最小元素 `values` 。
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: fd977b250a9856bf22c1bbfe7b0abc20680aa123
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 709c6c58310433fa848510a5c2f148a61bc64743
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82673674"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89343768"
