--- a/api/qsharp/microsoft.quantum.math.minusi.yml
+++ b/api/qsharp/microsoft.quantum.math.minusi.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.math.minusi
 name: MinusI
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回两个输入之间的差。
 syntax: 'function MinusI (a : Int, b : Int) : Int'
 input:
@@ -23,9 +23,9 @@ output:
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 969069896e7dc80aa2aafdb504f264eb9dc931ee
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: eb2fce992c4dbab19f2f5a083497af80914f7ef5
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686732"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89343479"
