--- a/api/qsharp/microsoft.quantum.oracles.discreteoracle.yml
+++ b/api/qsharp/microsoft.quantum.oracles.discreteoracle.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.oracles.discreteoracle
 name: DiscreteOracle
 type: newtype
-namespace: Microsoft.Quantum.Oracles
+namespace: microsoft.quantum.oracles
 summary: >-
   表示离散 oracle。
 
@@ -10,9 +10,9 @@ summary: >-
   这是一种 oracle，它实现 $U ^ m $ $U $ 的固定操作和非负 $m 整数。
 syntax: newtype DiscreteOracle = ((Int, Qubit[]) => Unit is Adj + Ctl);
 metadata:
-  ms.openlocfilehash: ef4b696816b6906f4d0858957a9ca10d06e4878f
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 64077bd5c448198ee0b3509d970e4df36050da9d
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681267"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89332021"
