--- a/api/qsharp/microsoft.quantum.preparation.preparearbitrarystate.yml
+++ b/api/qsharp/microsoft.quantum.preparation.preparearbitrarystate.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.preparation.preparearbitrarystate
 name: PrepareArbitraryState
 type: operation
-namespace: Microsoft.Quantum.Preparation
+namespace: microsoft.quantum.preparation
 summary: >-
   给定一组系数和一个小 endian 编码的量程寄存器，就给定的系数所描述的那个寄存器的状态进行准备。
 
@@ -15,14 +15,14 @@ summary: >-
   $ $ \begin{align} U\ket {0 ... 0} & = \ket{\psi} \\ \\ & = \frac{\ sum_ {j = 0} ^ {2 ^ n-1} r_j e ^ {i t_j} \ket{j}} {\sqrt{\ sum_ {j = 0} ^ {2 ^ n-1} | r_j | ^ 2}}。
 
   \end{align} $ $
-remarks: 负的输入系数 $r 将被视为值为 $ | r_j | $ 的 _j < $0。 `coefficients`如果指定的元素为 $ （r_j、t_j） = （0.0，0.0） $，则将用元素填充。
+remarks: 负的输入系数 $r 将被视为值为 $ | r_j | $ 的 _j < $0。 `coefficients` 将用元素 $ (r_j，t_j) = (0.0，0.0) $ （如果指定少于 $ 2 ^ n $）。
 syntax: 'operation PrepareArbitraryState (coefficients : Microsoft.Quantum.Math.ComplexPolar[], qubits : Microsoft.Quantum.Arithmetic.LittleEndian) : Unit'
-references: '- 量程逻辑电路的合成 Vivek Shende、Stephen Bullock、Igor Markovhttps://arxiv.org/abs/quant-ph/0406176'
+references: '- 量程逻辑电路的合成 Vivek Shende、Stephen Bullock、Igor Markov https://arxiv.org/abs/quant-ph/0406176'
 input:
   content: '(coefficients : Microsoft.Quantum.Math.ComplexPolar[], qubits : Microsoft.Quantum.Arithmetic.LittleEndian)'
   types:
   - name: coefficients
-    summary: 由其绝对值和相位 $ （r_j，t_j） $ 表示的最大值为 $ 2 ^ n $ 复数系数的数组。 $J $ th 用于索引以小字节序格式编码的数字状态 $ \ket{j} $。
+    summary: 由最多 $ 2 ^ n $ 个复数系数表示的数组，其绝对值和阶段 $ (r_j，t_j) $。 $J $ th 用于索引以小字节序格式编码的数字状态 $ \ket{j} $。
     isArray: true
     uid: microsoft.quantum.math.complexpolar
   - name: qubits
@@ -39,9 +39,9 @@ functors:
 seeAlso:
 - microsoft.quantum.preparation.approximatelypreparearbitrarystate
 metadata:
-  ms.openlocfilehash: ef7c8040f224762bbee7935a2c1a67ede4434b0f
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: ebeeb69e9fb599695bb65beb0ff4a307ec9e613b
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681193"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89331664"
