--- a/api/qsharp/microsoft.quantum.simulation.blockencodingreflection.yml
+++ b/api/qsharp/microsoft.quantum.simulation.blockencodingreflection.yml
@@ -2,15 +2,15 @@
 uid: microsoft.quantum.simulation.blockencodingreflection
 name: BlockEncodingReflection
 type: newtype
-namespace: Microsoft.Quantum.Simulation
-summary: '`BlockEncoding`表示也是反射的。'
+namespace: microsoft.quantum.simulation
+summary: 表示 `BlockEncoding` 也是反射的。
 syntax: newtype BlockEncodingReflection = Microsoft.Quantum.Simulation.BlockEncoding;
 seeAlso:
 - microsoft.quantum.canon.blockencoding
 metadata:
-  ms.openlocfilehash: c5640b41ec535c2b4b832a0aee85706e1ca8c13f
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: a63c29407f9fc7377c586ed65f8bebda70bfb9e9
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82655074"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89343496"
