--- a/api/qsharp/microsoft.quantum.simulation.blockencodingtoreflection.yml
+++ b/api/qsharp/microsoft.quantum.simulation.blockencodingtoreflection.yml
@@ -2,35 +2,35 @@
 uid: microsoft.quantum.simulation.blockencodingtoreflection
 name: BlockEncodingToReflection
 type: function
-namespace: Microsoft.Quantum.Simulation
+namespace: microsoft.quantum.simulation
 summary: >-
-  `BlockEncoding`将转换为等效`BLockEncodingReflection`的。
+  将转换为 `BlockEncoding` 等效的 `BLockEncodingReflection` 。
 
 
-  也就是说，假设有一个`BlockEncoding`用于对某个运算符进行编码的单一 $U $ $H $ 相关，则将`BlockEncodingReflection`其转换为对同一运算符进行编码的 $U $，同时满足 $U "^ \dagger = U" $。
+  也就是说，假设有一个 `BlockEncoding` 用于对某个运算符进行编码的单一 $U $ $H $ 相关，则将其转换为对 `BlockEncodingReflection` 同一运算符进行编码的 $U $，同时满足 $U "^ \Dagger = U" $。
 
   这会将 $U $ 的辅助寄存器大小增加了一个 qubit。
 remarks: 这会将 $U $ 的辅助寄存器大小增加了一个 qubit。
 syntax: 'function BlockEncodingToReflection (blockEncoding : Microsoft.Quantum.Simulation.BlockEncoding) : Microsoft.Quantum.Simulation.BlockEncodingReflection'
-references: '- Hamiltonian 模拟 by Qubitization Guang 脱离 Hao Low、Isaac 语https://arxiv.org/abs/1610.06546'
+references: '- Hamiltonian 模拟 by Qubitization Guang 脱离 Hao Low、Isaac 语 https://arxiv.org/abs/1610.06546'
 input:
   content: '(blockEncoding : Microsoft.Quantum.Simulation.BlockEncoding)'
   types:
   - name: blockEncoding
-    summary: 要`BlockEncoding`转换为反射的单一 $U $。
+    summary: '`BlockEncoding`要转换为反射的单一 $U $。'
     uid: microsoft.quantum.simulation.blockencoding
 output:
   content: Microsoft.Quantum.Simulation.BlockEncodingReflection
   types:
-  - summary: 单一 $U ' $ 共同操作寄存器`a`并`s`对其进行块编码 $H $，并满足 $U ^ \dagger = U ' $。
+  - summary: 单一 $U ' $ 共同操作寄存器并对 `a` 其 `s` 进行块编码 $H $，并满足 $U ^ \Dagger = U ' $。
     uid: microsoft.quantum.simulation.blockencodingreflection
 seeAlso:
 - microsoft.quantum.canon.blockencoding
 - microsoft.quantum.canon.blockencodingreflection
 metadata:
-  ms.openlocfilehash: e656a5ab9e187660a20420049374380ef9726647
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 50c1af14a110401074b4cd6538377de9626ba866
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686922"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89343411"
